# ShaderToy-like

./: Cargo.toml  Readme.md
src/: app.rs  camera.rs  main.rs  shader.wgsl
