[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
env_logger = "0.9.0"
image = "0.24.3"
log = "0.4.17"
notify = "4.0.17"
pollster = "0.2.5"
wgpu = "0.13.1"
winit = "0.27.2"
